2013-08-28

	* version 3.4.0beta5

2013-08-28

	* configure.in
	  po/eu.po: added Basque translation.

2013-08-26

	* libsylph/html.c: properly unescape special characters in links
	  (#120).

2013-08-16

	* libsylph/imap.c: imap_status(): fixed the parse failure of STATUS response
	  if a folder name contains brackets (sylpheed:35704).

2013-06-07

	* config.guess
	  config.sub: updated to 2009-06-11 version.

2013-06-07

	* src/template.c: template_compare_id(): fixed constness.

2013-06-03

	* src/prefs_template.c
	  src/template.[ch]: stabilize the order of templates.

2013-05-24

	* version 3.4.0beta4

2013-05-24

	* src/compose.c: compose_ext_editor_child_exit(): raise compose
	  window when the external editor exits (thanks to Steve Kirkendall).

2013-05-24

	* manual/ja/sylpheed.sgml: updated Japanese manual.

2013-05-23

	* libsylph/prefs_common.[ch]
	  src/messageview.c
	  src/filesel.c
	  src/summaryview.c: save selected file type.


2013-05-21

	* src/filesel.[ch]
	  src/messageview.c
	  src/summaryview.c: automatically modify file extension when
	  file type is changed.

2013-05-20

	* src/textview.c: textview_write_link(): insert space between
	  continuous links to avoid non-responsive links.

2013-05-15

	* src/printing.c: modified debug output.

2013-05-14

	* src/messageview.[ch]
	  src/mimeview.[ch]: refactored: moved MimeInfo and file path member
	  from MimeInfo to MessageView so that it can be used from TextView.

2013-05-14

	* libsylph/prefs_common.[ch]
	  src/prefs_common_dialog.c
	  src/textview.c: added an option to prefer HTML part in
	  multipart/alternative.

2013-05-14

	* libsylph/html.[ch]: supported <blockquote> tag.

2013-04-05

	* libsylph/procmsg.c: procmsg_print_message(): print all texts in
	  messages, not only the first one.

2013-04-05

	* src/printing.c: print all texts in messages, not only the first one.

2013-04-04

	* libsylph/procmsg.c:
	  procmsg_print_message()
	  procmsg_print_message_part()