@@ -1,3 +1,8 @@
+2013-09-10
+
+	* src/imageview.[ch]
+	  src/textview.c: rotate attached images based on Exif orientation tag.
+
 2013-08-28
 
 	* version 3.4.0beta5
@@ -14,8 +19,8 @@
 
 2013-08-16
 
-	* libsylph/imap.c: imap_status(): fixed the parse failure of STATUS response
-	  if a folder name contains brackets (sylpheed:35704).
+	* libsylph/imap.c: imap_status(): fixed the parse failure of STATUS
+	  response if a folder name contains brackets (sylpheed:35704).
 
 2013-06-07
 
